ARC-99: fix action bar visibilities

--- a/src/views/viewer/components/viewer.scss
+++ b/src/views/viewer/components/viewer.scss
@@ -5,7 +5,7 @@
     flex-direction: row;
     &-container {
         height: 100%;
-        width: 700px;
+        // width: 700px;
     }
 
     *[class^='page-'] {
